--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
-spring.datasource.url=jdbc:postgresql://lallah.db.elephantsql.com:5432/tycslchm
-spring.datasource.username = tycslchm
-spring.datasource.password = JFwVbQBzt3c0zmUMfHYioza4RUZ_yC2z
+spring.datasource.url=jdbc:postgresql://lallah.db.elephantsql.com:5432/database
+spring.datasource.username = username
+spring.datasource.password = password
 spring.jpa.hibernate.ddl-auto = update
 
 
